--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Painters Inc</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" sizes="76x76" href="/view/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/view/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/view/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/view/favicons/manifest.json">
+    <link rel="mask-icon" href="/view/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="view/css/main.css" />
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +29,7 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+        <base href="/" />
+        <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
